--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+#No realizar commits de este archivo al ser una grafica que cambia aleatoriamente
+temp-plot.html
