--- a/.gitignore
+++ b/.gitignore
@@ -129,4 +129,4 @@ dmypy.json
 .pyre/
 
 #No realizar commits de este archivo al ser una grafica que cambia aleatoriamente
-temp-plot.html
+*/temp-plot.html
